@@ -11,6 +11,7 @@ ViSP 2.9.1 (under development)
     . Introduction of circles in the model-based tracker
   - Bug fixed
     . [17112] Error after second call to track() in vpMbEdgeTracker
+    . [17212] vp1394TwoGrabber: unable to select a camera from its guid
 ----------------------------------------------
 ViSP 2.9.0 (released February 18th, 2014)
   - New features
